--- a/truyum-spring-boot/pom.xml
+++ b/truyum-spring-boot/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.6</version>
+		</dependency>
 		<!-- Date Picker Dependancy -->
 		<dependency>
 			<groupId>org.webjars</groupId>
